##                                       -*- Automake -*-
## Process this file with automake to produce Makefile.in
##
SUBDIRS = ckit docs tests

ACLOCAL_AMFLAGS = --install -I m4

dist_doc_DATA = README COPYING
EXTRA_DIST = TODO

CLEANFILES = $(srcdir)/*~
DISTCLEANFILES = $(srcdir)/autoscan.log $(srcdir)/configure.scan
MAINTAINERCLEANFILES = aclocal.m4 config.h.in configure Makefile.in
